import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '9.0.0-beta13'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        url = 'https://oss.sonatype.org/content/repositories/snapshots'
    }
}

dependencies {
//    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
    compileOnly fileTree('lib') { include '*.jar' }
    compileOnly 'cloud.timo.timocloud:TimoCloud-API:6.7.9'
    implementation 'redis.clients:jedis:5.2.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

publishing {
    publications {
        shadow(MavenPublication) {
            from components.shadow
        }
    }
}

tasks.named('shadowJar', ShadowJar) {
    archiveClassifier = ''
}